--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>Home Page</title>
+<link rel="stylesheet" href={{ url_for('static', filename='index.css') }}
 {% endblock %}
 
 {% block body %}
