--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Reservation Restaurant System</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,3 +13,4 @@
 <body>
     {% block body %} {% endblock %}
 </body>
+</html>
