--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,15 @@
 {% endblock %}
 
 {% block body %}
-<br>
-<h1>Home Page</h1>
-<br>
+<section class = "nav-link">
+    <nav>
+        <label>Group 2</label>
+            <ul>
+                <li> <a href = "#">Login</a></li>
+                <li> <a href = "#">Register</a></li>
+            </ul>
+    </nav>
+</section>
+
+
 {% endblock %}
