--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block head %}
 <title>Home Page</title>
-<link rel="stylesheet" href={{ url_for('static', filename='index.css') }}
+<link rel="stylesheet" href="static\css\index.css"
 {% endblock %}
 
 {% block body %}
-<br>
-<h1>Welcome to the System</h1>
-<br>
+
+<h1>Web Application Name</h1>
+<h1> Short Description of Web Application</h1>
 {% endblock %}
