--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Reservation Restaurant System</title>
+    <!-- Put title under <head> for good practice -->
+    <title>Home Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,4 +14,3 @@
 <body>
     {% block body %} {% endblock %}
 </body>
-</html>
