--- a/static/index.css
+++ b/static/index.css
@@ -43,12 +43,15 @@ nav a:hover{
 }
 .log-in{
     margin: 270px auto;
+
 }
 .container{
     width: 320px;
     margin:auto;
     background-color: whitesmoke;
     padding: 40px;
+    /* float: left; */
+
 }
 .header{
     margin: 0px auto 30px auto;
