Make background responsive not done

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,9 @@
 {% endblock %}
 
 {% block body %}
-<section class = "nav-link">
-    <nav>
-        <label>Appplication</label>
-            <ul>
-                <li> <a href = "#">Login</a></li>
-                <li> <a href = "#">Guest-User</a></li>
-            </ul>
-    </nav>
-</section>
 
-<section class = "log-in">
+
+<!-- <section class = "log-in">
     <div class = container>
         <div class = "header">
             <h1>Login</h1> 
@@ -40,7 +32,7 @@
             <a href = #>Guest-User</a> 
         </div>
     </div>
-</section>
+</section> -->
 </html>
 
 
