--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,3 @@
-
 *{
     margin:0;
     padding:0;
@@ -6,43 +5,20 @@
     box-sizing: border-box;
 }
 
-nav{
-    background-color: darkblue;
+
+body{
+    height: auto;
+    background-image: url("../images/Home Page Background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+img{
     width: 100%;
-    overflow: hidden;
-
+    height: auto;
 }
-nav > label{
-    color:White;
-    font-size: 30px;
-    padding:0 50px;
-    font-weight: bold;
-    line-height: 80px;
-}
-
-nav ul{
-    list-style: none;
-    float:right;
-    margin-right: 20px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin:0 10px;
-}
-nav ul li a {
-    color: white;
-    font-size: 17px;
-
-    padding:10px;
-    border-radius: 10px;  
-}
-
-nav a:hover{
-    background-color: blue;
-}
-.log-in{
+/* .log-in{
     margin: 270px auto;
 
 }
@@ -51,7 +27,6 @@ nav a:hover{
     margin:auto;
     background-color: whitesmoke;
     padding: 40px;
-    /* float: left; */
 
 }
 .header{
@@ -78,17 +53,4 @@ button{
 }
 .guest-user{
     text-align: center;
-}
-@media screen and (max-width: 525px) {
-    nav {
-        display: block;
-        padding: 0;
-        text-align: center;
-    }
-    nav ul {
-        margin: auto;
-        float:none;
-        text-align: center;
-        align-items: center;
-    }
-}
+} */
