--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,13 @@
 
 {% block body %}
 
+<section class = "nav">
+    <div class = "background-card">
+        <img alt = "background" src = "static/images/Home Page Background.jpg">
+    </div>
+</section>
 
-<!-- <section class = "log-in">
+<section class = "log-in">
     <div class = container>
         <div class = "header">
             <h1>Login</h1> 
@@ -32,7 +37,7 @@
             <a href = #>Guest-User</a> 
         </div>
     </div>
-</section> -->
+</section>
 </html>
 
 
