--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,28 +7,33 @@
 
 
 body{
-    height: auto;
+    /* margin-left: 400px; */
+    height: 100%;
+    overflow: hidden;
     background-image: url("../images/Home Page Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: 100% 100%;
     background-attachment: fixed;
 }
-img{
-    width: 100%;
-    height: auto;
+/* image is not visible */
+.background-card img{
+    width:0px;
+    height: 0px;
 }
-/* .log-in{
+.log-in{
     margin: 270px auto;
-
+    /* float: left; */
 }
 .container{
     width: 320px;
     margin:auto;
     background-color: whitesmoke;
     padding: 40px;
-
+    position: relative;
+    /* height: 500px; */
 }
+
 .header{
     margin: 0px auto 30px auto;
     text-align: center;
@@ -53,4 +58,16 @@ button{
 }
 .guest-user{
     text-align: center;
-} */
+}
+@media screen and (max-width: 768px) {
+    body{
+        background-image: none;
+    }
+    .log-in{
+        margin: 100px auto;
+    }
+    .background-card img{
+        width:100%;
+        height: 300px;
+    }
+}
