--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,33 +5,31 @@
     box-sizing: border-box;
 }
 
-
 body{
-    /* margin-left: 400px; */
-    height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-image: url("../images/Home Page Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
     background-attachment: fixed;
+    
 }
+
 /* image is not visible */
 .background-card img{
     width:0px;
     height: 0px;
 }
+
 .log-in{
     margin: 270px auto;
-    /* float: left; */
 }
+
 .container{
     width: 320px;
-    margin:auto;
+    margin: auto auto auto 20%;
     background-color: whitesmoke;
     padding: 40px;
-    position: relative;
-    /* height: 500px; */
 }
 
 .header{
@@ -54,20 +52,27 @@ button{
 .sign-up{
     text-align: center;
     margin: 0px auto 10px auto;
-
 }
+
 .guest-user{
     text-align: center;
 }
+
 @media screen and (max-width: 768px) {
     body{
         background-image: none;
     }
     .log-in{
-        margin: 100px auto;
+        margin: 50% auto;
+    }
+    .container{
+        margin: auto;
+        position: relative;
     }
     .background-card img{
         width:100%;
-        height: 300px;
+        height: 275px;
     }
+ 
 }
+/* Issue: ipad pro, galaxy fold */
