Fixed responsiveness for landscape orientation

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div class = "sign-up">
-            <p>Don't have an account: <a href = #>Sign Up</a> </p>   
+            <p>Not a member? <a href = #>Signup now</a> </p>   
         </div>
         <div class = "guest-user">
             <a href = #>Guest-User</a> 
