--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    /* overflow: hidden; */
+    overflow: hidden;
     background-image: url("../images/Home Page Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -42,6 +42,8 @@ body{
 input{
     margin: 0px auto 30px auto;
     width: 100%;
+    padding: 5px;
+
 }
 button{
     margin: 0px auto 30px auto;
@@ -58,9 +60,21 @@ button{
     text-align: center;
 }
 
+/* if phone is landscape */
+@media screen and (max-height: 800px) {
+    .log-in{
+        margin: 15%  auto;
+    }
+   
+    body{
+        overflow: scroll;
+    }
+}
+
 @media screen and (max-width: 768px) {
     body{
         background-image: none;
+        overflow: scroll;
     }
     .log-in{
         margin: 50% auto;
@@ -73,6 +87,11 @@ button{
         width:100%;
         height: 275px;
     }
+}
+
+@media screen and (max-width: 320px) {
+    .container{
+        width: 100%;
+    }
  
 }
-/* Issue: ipad pro, galaxy fold */
