Design login form

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,17 +16,17 @@
 <section class = "log-in">
     <div class = container>
         <div class = "header">
-            <h1>Login</h1> 
+            <h1>Login Form</h1> 
         </div>
         <div class = "body">
             <form>
                 <span>
-                    
-                    <input type = "text" placeholder="Email" name = "">
+                    <input class = "span1" type = "text" placeholder="Email Address" name = "">
                 </span>
                 <span>
-                    <input type = "password" placeholder="Password" name = "">
+                    <input class = "span2" type = "password" placeholder="Password" name = "">
                 </span>
+                <a href = #>Forgot password?</a> 
                 <button type = "submit">LogIn</button>
             </form>
         </div>
