--- a/static/css/index.css
+++ b/static/css/index.css
@@ -36,20 +36,38 @@ body{
     margin: 0px auto 30px auto;
     text-align: center;
 }
+
+.header > h1{
+    font-size: 30px;
+}
 .body{
     text-align: center;
 }
-input{
+input.span1{
     margin: 0px auto 30px auto;
     width: 100%;
-    padding: 5px;
+    padding: 10px;
+}
 
+input.span2{
+    margin: 0px auto;
+    width: 100%;
+    padding: 10px;
+}
+
+form > a{
+    float: left;
+    margin: 10px auto 20px auto;
 }
 button{
     margin: 0px auto 30px auto;
-    width: 100px;
-    padding: 5px;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    color: white;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
 }
+
 
 .sign-up{
     text-align: center;
