Routing of Sign Up Page and minor fixes

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -46,7 +46,7 @@
             <p>Already a member? <a href = "http://127.0.0.1:5000/">Login Now</a> </p>   
         </div>
         <div class = "guest-user">
-            <a href = #>Continue as Guest</a> 
+            <a href = reservation>Continue as Guest</a> 
         </div>
     </div>
 </section>
