--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -75,8 +75,17 @@ button{
     margin: 0px auto 10px auto;
 }
 
+.sign-up a:hover{
+    color: red;
+
+}
 .guest-user{
     text-align: center;
+}
+
+.guest-user a:hover{
+    color: red;
+
 }
 
 /* if phone is landscape */
