--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,19 +6,12 @@
 }
 
 body{
-    overflow: hidden;
     background-image: url("../images/Home Page Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
-    background-attachment: fixed;
+    background-attachment: scroll;
     
-}
-
-/* image is not visible */
-.background-card img{
-    width:0px;
-    height: 0px;
 }
 
 .log-in{
@@ -27,7 +20,7 @@ body{
 
 .container{
     width: 320px;
-    margin: auto auto auto 20%;
+    margin: auto auto auto 10%;
     background-color: whitesmoke;
     padding: 40px;
 }
@@ -78,32 +71,18 @@ button{
     text-align: center;
 }
 
-/* if phone is landscape */
-@media screen and (max-height: 800px) {
-    .log-in{
-        margin: 15%  auto;
-    }
-   
-    body{
-        overflow: scroll;
-    }
-}
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 900px) {
     body{
-        background-image: none;
-        overflow: scroll;
+        background-position: center top;
+        background-size: 100% 30%;
     }
     .log-in{
-        margin: 50% auto;
+        margin: auto;
     }
     .container{
-        margin: auto;
-        position: relative;
-    }
-    .background-card img{
-        width:100%;
-        height: 275px;
+        margin: 480px auto 160px auto;
     }
 }
 
@@ -111,5 +90,4 @@ button{
     .container{
         width: 100%;
     }
- 
 }
