--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,14 @@
                     <input class = "span2" type = "password" placeholder="Password" name = "">
                 </span>
                 <a href = #>Forgot password?</a> 
-                <button type = "submit">Log In</button>
+                <button type = "submit">LogIn</button>
             </form>
         </div>
         <div class = "sign-up">
-            <p>Not a member? <a href = sign_up>Signup now</a> </p>   
+            <p>Not a member? <a href = #>Signup now</a> </p>   
         </div>
         <div class = "guest-user">
-            <a href = reservation>Guest-User</a> 
+            <a href = #>Guest-User</a> 
         </div>
     </div>
 </section>
