fixed responsive properly and route

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,10 @@
             </form>
         </div>
         <div class = "sign-up">
-            <p>Not a member? <a href = #>Signup now</a> </p>   
+            <p>Not a member? <a href = sign_up>Signup now</a> </p>   
         </div>
         <div class = "guest-user">
-            <a href = #>Guest-User</a> 
+            <a href = reservation>Guest-User</a> 
         </div>
     </div>
 </section>
