--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,7 +10,7 @@
 <section class = "log-in">
     <div class = container>
         <div class = "header">
-            <h1>Sign Up Form</h1> 
+            <label>Sign Up Form</label> 
         </div>
         <div class = "body">
             <form>
