--- a/static/css/index.css
+++ b/static/css/index.css
@@ -30,8 +30,19 @@ body{
     text-align: center;
 }
 
-.header > h1{
+.header > label{
     font-size: 30px;
+    font-weight: bolder;
+    font-style: italic;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
+.header > p{
+    margin-top: 15px;
+    font-style: italic;
 }
 .body{
     text-align: center;
@@ -70,7 +81,6 @@ button{
 .guest-user{
     text-align: center;
 }
-
 
 
 @media screen and (max-width: 900px) {
