--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <section class = "log-in">
     <div class = container>
         <div class = "header">
-            <h1>Login Form</h1> 
+            <label>Registro</label> 
+            <p>Restaurant reservation made easier with one click</p>
         </div>
         <div class = "body">
             <form>
