Adding users details to database, and routing it to reservation page if it matches in Log In

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Home Page</title>
+<title>Sign Up Page</title>
 <link rel="stylesheet" href="static\css\sign_up.css"
 {% endblock %}
 
@@ -19,24 +19,24 @@
             <h1>Sign Up Form</h1> 
         </div>
         <div class = "body">
-            <form>
+            <form  method = "POST">
                 <span>
-                    <input class = "span1" type = "text" placeholder="First Name" name = "">
+                    <input class = "span1" type = "text" placeholder="First Name" name = "fname">
                 </span>
                 <span>
-                    <input class = "span2" type = "text" placeholder="Last Name" name = "">
+                    <input class = "span2" type = "text" placeholder="Last Name" name = "lname">
                 </span>
                 <span>
-                    <input class = "span2" type = "text" placeholder="Phone Number" name = "">
+                    <input class = "span2" type = "text" placeholder="Phone Number" name = "contact">
                 </span>
                 <span>
-                    <input class = "span2" type = "text" placeholder="Email Address" name = "">
+                    <input class = "span2" type = "text" placeholder="Email Address" name = "email">
                 </span>
                 <span>
-                    <input class = "span2" type = "password" placeholder="Create Password" name = "">
+                    <input class = "span2" type = "password" placeholder="Create Password" name = "pass_word">
                 </span>
                 <span>
-                    <input class = "span2" type = "password" placeholder="Confirm Password" name = "">
+                    <input class = "span2" type = "password" placeholder="Confirm Password" name = "pass_c">
                 </span>
                 
                 <button type = "submit">Sign Up</button>
