--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -15,24 +15,31 @@
         <div class = "body">
             <form  method = "POST">
                 <span>
-                    <input class = "span1" type = "text" placeholder="First Name" name = "fname">
+                    <input class = "span1" type = "text" placeholder="First Name" name = "fname" required>
                 </span>
                 <span>
+                    <input class = "span1" type = "text" placeholder="Last Name" name = "lname" required>
+                </span>
+                <span>
+                    <input class = "span1" type = "text" placeholder="Phone Number" name = "contact" required>
+                </span>
+                <span>
+                    <input class = "span1" type = "text" placeholder="Email Address" name = "email" required>
+                </span>
 
-                    <input class = "span1" type = "text" placeholder="Last Name" name = "lname">
-                </span>
-                <span>
-                    <input class = "span1" type = "text" placeholder="Phone Number" name = "contact">
-                </span>
-                <span>
-                    <input class = "span1" type = "text" placeholder="Email Address" name = "email">
-                </span>
-                <span>
-                    <input class = "span1" type = "password" placeholder="Create Password" name = "pass_word">
-                </span>
-                <span>
-                    <input class = "span1" type = "password" placeholder="Confirm Password" name = "pass_c">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for msg in messages %}
+                            <p class = "span1">{{msg}}</p>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
 
+                <span>
+                    <input class = "span1" type = "password" placeholder="Create Password" name = "pass_word" required>
+                </span>
+                <span>
+                    <input class = "span1" type = "password" placeholder="Confirm Password" name = "pass_c" required>
                 </span>
                 
                 <button type = "submit">Sign Up</button>
