--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,8 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
-    background-attachment: scroll;
+    background-attachment: fixed;
+    overflow: hidden;
     
 }
 
@@ -51,6 +52,13 @@ input.span1{
     margin: 0px auto 30px auto;
     width: 100%;
     padding: 10px;
+}
+
+p.span1{
+    margin: 0px auto;
+    width: 100%;
+    padding: 5px;
+    color: red;
 }
 
 input.span2{
