--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
-    /* background-attachment: scroll; */
+    background-attachment: fixed;
     /* add */
     overflow: hidden;
 }
