--- a/static/css/index.css
+++ b/static/css/index.css
@@ -90,6 +90,8 @@ button{
 @media screen and (max-width: 1300px) and (max-height: 800px){
     body{
         overflow: auto;
+        background-attachment: scroll;
+
     }
 }
 @media screen and (max-width: 900px) {
@@ -98,6 +100,8 @@ button{
         background-size: 100% 30%;
         /* add */
         overflow: auto;
+        background-attachment: scroll;
+
 
     }
     .log-in{
