Route and nav bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             </form>
         </div>
         <div class = "sign-up">
-            <p>Not a member? <a href = sign_up>Signup now</a> </p>   
+            <p>Not a member? <a href = sign_up>Sign Up Now</a> </p>   
         </div>
         <div class = "guest-user">
             <a href = reservation>Guest-User</a> 
