--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -2,10 +2,21 @@
 
 {% block head %}
 <title>Reservation</title>
+<link rel="stylesheet" href="static\css\reservation.css"
 {% endblock %}
 
 {% block body %}
-<br>
-<h1>Reserve a table</h1>
-<br>
+<section class = "nav-link">
+    <nav>
+        <label>Registro</label>
+        <ul>
+            <li> <a href = "http://127.0.0.1:5000/">Login</a></li>
+            <li> <a href = "sign_up">Sign Up</a></li>
+        </ul>
+    </nav>
+</section>
+
+<section class = "reserve-table">
+
+</section>
 {% endblock %}
