--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -16,7 +16,8 @@
     </nav>
 </section>
 
-<section class = "reserve-table">
-
-</section>
+<div class = "background-img"></div>
+<div class="bg-text">
+    
+</div>
 {% endblock %}
