Guest end point

--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -18,6 +18,29 @@
 
 <div class = "background-img"></div>
 <div class="bg-text">
+    <div class = "header">
+        <label>Registro</label> 
+        <p>Restaurant reservation made easier with one click</p>
+    </div>
+
+    <form method = "POST">
+        <span>
+            <input class = "span1" type = "text" placeholder= "Name" name = "" required>
+        </span>
+        <span>
+            <input class = "span1" type = "text" placeholder= "Phone no." name = "" required>
+        </span>
+        <span>
+            <input class = "span1" type = "text" placeholder="Email Address" name = "" required>
+        </span>
+        <span>
+            <input class = "span1" type = "date" placeholder="Date and Time" name = "" required>
+        </span>
+        <span>
+            <input class = "span1" type = "text" placeholder="No. of Guests for Dining" name = "" required>
+        </span>
+        <button type = "submit">LogIn</button>
+    </form>
     
 </div>
 {% endblock %}
