--- a/static/css/reservation.css
+++ b/static/css/reservation.css
@@ -6,6 +6,7 @@
 }
 html,body{
     height:100%;
+    /* overflow: hidden; */
 }
 nav{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
@@ -34,7 +35,6 @@ nav ul li a {
     color: white;
     font-size: 17px;
 
-    /* a.active, a.hover background radius becomes more visible */
     padding:10px;
     border-radius: 10px;  
 }
@@ -52,16 +52,70 @@ li > a:hover{
     background-size: cover;
 }
 .bg-text {
-    background-color: white; /* Black w/opacity/see-through */
+    background-color: whitesmoke; 
     color: black;
-    font-weight: bold;
     position: absolute;
-    top: 50%;
+    top: 58%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 30em;
     padding: 20px;
+}
+
+.header{
+    margin: 0px auto 30px auto;
     text-align: center;
+}
+
+input.span1{
+    margin: 0px auto 30px auto;
+    width: 100%;
+    padding: 20px;
+    border-color:black;
+}
+
+button{
+    margin: 0px auto 30px auto;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    color: white;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
+}
+
+
+.header > label{
+    font-size: 30px;
+    font-weight: bolder;
+    font-style: italic;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
+.header > p{
+    margin-top: 15px;
+    font-style: italic;
+}
+@media screen and (max-height: 720px){
+    .background-img{
+        background-image: none;
+        height:0%; 
+    }
+    .bg-text{
+        width:70%;
+        top: 0%;
+        left: 0%;
+        transform: translate(0, 0);
+        position: relative;
+        margin:100px auto;
+    }
+    html,body{
+        height: auto;
+        /* overflow: auto; */
+
+    }
 }
 @media screen and (max-width: 525px) {
     nav {
@@ -71,12 +125,28 @@ li > a:hover{
     }
     nav > label{
         padding:0px;
-
     }
     nav ul {
         margin: auto;
         float:none;
         text-align: center;
         align-items: center;
+    }
+    .background-img{
+        background-image: none;
+        height:0%; 
+    }
+    .bg-text{
+        width:100%;
+        top: 0%;
+        left: 0%;
+        transform: translate(0, 0);
+        position: relative;
+        margin:100px auto;
+    }
+    html,body{
+        height: auto;
+        /* overflow: auto; */
+
     }
 }
