--- a/templates/user_reservation.html
+++ b/templates/user_reservation.html
@@ -10,8 +10,8 @@
     <nav>
         <label>Registro</label>
         <ul>
-            <li> <a href = "http://127.0.0.1:5000/">Login</a></li>
-            <li> <a href = "sign_up">Sign Up</a></li>
+            <li> <a href = "http://127.0.0.1:5000/">Hello {{msg}}</a></li>
+            <li> <a href = "http://127.0.0.1:5000/">Sign out</a></li>
         </ul>
     </nav>
 </section>
