--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,13 +11,13 @@ body{
     background-position: center;
     background-size: 100% 100%;
     background-attachment: fixed;
-    overflow: hidden;
+    /* overflow: hidden; */
     
 }
 
 .container{
     width: 320px;
-    margin: 15% 10%;
+    margin: 13% 10%;
     background-color: whitesmoke;
     padding: 40px;
 }
@@ -86,19 +86,16 @@ button{
     text-align: center;
 }
 
-@media screen and (max-width: 1300px) and (max-height: 800px){
+@media screen and (max-width: 1300px) and (max-height: 1000px){
     body{
         overflow: auto;
-        background-attachment: scroll;
-
     }
 }
 @media screen and (max-width: 900px) {
     body{
         background-position: center top;
         background-size: 100% 30%;
-        overflow: auto;
-        background-attachment: scroll;
+        /* overflow: auto; */
     }
     .log-in{
         margin: auto;
