--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -11,12 +11,12 @@ body{
     background-position: center;
     background-size: 100% 100%;
     background-attachment: fixed;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .container{
     width: 320px;
-    margin: 9.5% 10%;
+    margin: 8% 10%;
     background-color: whitesmoke;
     padding: 40px;
 }
@@ -85,7 +85,7 @@ button{
     text-align: center;
 }
 
-@media screen and (max-width: 1300px) and (max-height: 800px){
+@media screen and (max-width: 1300px) and (max-height: 1000px){
     body{
         overflow: auto;
     }
@@ -94,8 +94,7 @@ button{
     body{
         background-position: center top;
         background-size: 100% 30%;
-        overflow: auto;
-
+        /* overflow: auto; */
     }
     .log-in{
         margin: auto;
