--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -11,12 +11,12 @@ body{
     background-position: center;
     background-size: 100% 100%;
     background-attachment: fixed;
-    /* overflow: hidden; */
+    overflow: hidden; 
 }
 
 .container{
     width: 320px;
-    margin: 8% 10%;
+    margin: 12vh 10vw;
     background-color: whitesmoke;
     padding: 40px;
 }
@@ -75,7 +75,6 @@ button{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
 }
 
-
 .sign-up{
     text-align: center;
     margin: 0px auto 10px auto;
@@ -85,22 +84,18 @@ button{
     text-align: center;
 }
 
-@media screen and (max-width: 1300px) and (max-height: 1000px){
-    body{
-        overflow: auto;
-    }
-}
-@media screen and (max-width: 900px) {
+
+@media screen and (max-width: 900px), screen and (max-height: 850px) {
     body{
         background-position: center top;
         background-size: 100% 30%;
-        /* overflow: auto; */
-    }
-    .log-in{
-        margin: auto;
+        background-attachment: scroll;
+        overflow: auto;
+
     }
     .container{
         margin: 480px auto 160px auto;
+        position: relative;
     }
 }
 
