--- a/templates/user_reservation.html
+++ b/templates/user_reservation.html
@@ -9,8 +9,9 @@
 <section class = "nav-link">
     <nav>
         <label>Registro</label>
-        <ul>
-            <li> <a href = "http://127.0.0.1:5000/">Hello {{msg}}</a></li>
+        <ul> 
+            <li> <a href = "http://127.0.0.1:5000/">Hello {{session.name}} </a></li>
+
             <li> <a href = "http://127.0.0.1:5000/">Sign out</a></li>
         </ul>
     </nav>
