--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -29,7 +29,7 @@
                     <input class = "span1" type = "text" placeholder="Last Name" name = "lname" required>
                 </span>
                 <span>
-                    <input class = "span1" type = "tel" placeholder= "Contact: 012-345-6789" name = "contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                    <input class = "span1" type = "tel" placeholder= "Phone No." name = "contact" required>
                 </span>
                 <span>
                     <input class = "span1" type = "email" placeholder="Email Address" name = "email" required>
