--- a/templates/user_reservation.html
+++ b/templates/user_reservation.html
@@ -25,19 +25,19 @@
 
     <form method = "POST">
         <span>
-            <input class = "span1" type = "text" placeholder= "Name" name = "" required>
+            <input class = "span1" type = "text" placeholder= "Name" name = "name" required>
         </span>
         <span>
-            <input class = "span1" type = "tel" placeholder= "Contact: 012-345-6789" name = "" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <input class = "span1" type = "tel" placeholder= "Phone No." name = "contact"  required>
         </span>
         <span>
-            <input class = "span1" type = "email" placeholder="Email Address" name = "" required>
+            <input class = "span1" type = "email" placeholder="Email Address" name = "email" required>
         </span>
         <span>
-            <input class = "span1" type = "datetime-local" placeholder="Date and Time" name = "" required>
+            <input class = "span1" type = "datetime-local" placeholder="Date and Time" name = "date" required>
         </span>
         <span>
-            <input class = "span1" type = "number" placeholder= "No. of Guests for Dining" min = "1" max = "10" name = "" required>
+            <input class = "span1" type = "number" placeholder= "No. of Guests for Dining" min = "1" max = "10" name = "guest" required>
         </span>
         <button type = "submit">LogIn</button>
     </form>
