--- a/static/css/reservation.css
+++ b/static/css/reservation.css
@@ -80,7 +80,11 @@ p.span1{
     padding: 5px;
     color: red;
 }
-
+span.span1{
+    display: flex;
+    width: 100%;
+    border-color:black;
+}
 button{
     margin: 0px auto 30px auto;
     width: 100%;
@@ -137,6 +141,11 @@ button{
         float:none;
         text-align: center;
         align-items: center;
+    }
+    span.span1{
+        display: block;
+        width: 100%;
+        border-color:black;
     }
     .background-img{
         background-image: none;
