--- a/templates/index.html
+++ b/templates/index.html
@@ -7,40 +7,40 @@
 
 {% block body %}
 
-<section class = "log-in">
-    <div class = container>
-        <div class = "header">
-            <label>Registro</label> 
-            <p>Restaurant reservation made easier with one click</p>
-        </div>
-
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for msg in messages %}
-                    <p class = "span1">{{msg}}</p>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}    
-
-        <div class = "body">
-            <form method = "POST">
-                <span>
-                    <input class = "span1" type = "text" placeholder="Email Address" name = "email_login" required>
-                </span>
-                <span>
-                    <input class = "span2" type = "password" placeholder="Password" name = "pass_login" required>
-                </span>
-                <a href = #>Forgot password?</a> 
-                <button type = "submit">LogIn</button>
-            </form>
-        </div>
-        <div class = "sign-up">
-            <p>Not a member? <a href = sign_up>Sign Up Now</a> </p>   
-        </div>
-        <div class = "guest-user">
-            <a href = reservation>Guest-User</a> 
-        </div>
+<div class="background"</div>
+<div class = container>
+    <div class = "header">
+        <label>Registro</label> 
+        <p>Restaurant reservation made easier with one click</p>
     </div>
-</section>
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <p class = "span1">{{msg}}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}    
+
+    <div class = "body">
+        <form method = "POST">
+            <span>
+                <input class = "span1" type = "text" placeholder="Email Address" name = "email_login" required>
+            </span>
+            <span>
+                <input class = "span2" type = "password" placeholder="Password" name = "pass_login" required>
+            </span>
+            <a href = #>Forgot password?</a> 
+            <button type = "submit">Login</button>
+        </form>
+    </div>
+    <div class = "sign-up">
+        <p>Not a member? <a href = sign_up>Sign Up Now</a> </p>   
+    </div>
+    <div class = "guest-user">
+        <a href = reservation>Guest-User</a> 
+    </div>
+</div>
+
 
 {% endblock %}
