--- a/static/css/reservation.css
+++ b/static/css/reservation.css
@@ -13,12 +13,13 @@ nav{
     width: 100%;
     overflow: hidden;
 }
-nav > label{
+nav > label a{
     color:White;
     font-size: 30px;
     padding:0 50px;
     font-weight: bold;
     line-height: 80px;
+    display: inline-block;
 }
 
 nav ul {
