--- a/templates/user_reservation.html
+++ b/templates/user_reservation.html
@@ -8,7 +8,9 @@
 {% block body %}
 <section class = "nav-link">
     <nav>
-        <label>Registro</label>
+        <label>
+            <a href = "http://127.0.0.1:5000/">Registro</a>
+        </label>
         <ul> 
             <li> <a href = "http://127.0.0.1:5000/">Hello {{session.name}} </a></li>
             <li> <a href = "http://127.0.0.1:5000/">Sign out</a></li>
