Database for Reserving the Tables

--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -25,21 +25,21 @@
 
     <form method = "POST">
         <span>
-            <input class = "span1" type = "text" placeholder= "Name" name = "" required>
+            <input class = "span1" type = "text" placeholder= "Name" name = "name2" required>
         </span>
         <span>
-            <input class = "span1" type = "text" placeholder= "Phone no." name = "" required>
+            <input class = "span1" type = "text" placeholder= "Phone no." name = "contact" required>
         </span>
         <span>
-            <input class = "span1" type = "text" placeholder="Email Address" name = "" required>
+            <input class = "span1" type = "text" placeholder="Email Address" name = "email" required>
         </span>
         <span>
-            <input class = "span1" type = "datetime-local" placeholder="Date and Time" name = "" required>
+            <input class = "span1" type = "datetime-local" placeholder="Date and Time" name = "datetime" required>
         </span>
         <span>
-            <input class = "span1" type = "text" placeholder="No. of Guests for Dining" name = "" required>
+            <input class = "span1" type = "text" placeholder="No. of Guests for Dining" name = "count" required>
         </span>
-        <button type = "submit">LogIn</button>
+        <button type = "submit">Let's go</button>
     </form>
     
 </div>
