--- a/static/css/success.css
+++ b/static/css/success.css
@@ -57,10 +57,12 @@ a:visited {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    color:white;
-    background-color: blue;
+    color:black;
+    background-color: rgba(255,255,255,0.7);
     padding: 10px;
     text-align: center;
+    font-style: italic;
+    font-weight: bold;
 
 }
 @media only screen and (max-width: 1024px), screen and (max-height: 500px) {
