--- a/templates/final_booking.html
+++ b/templates/final_booking.html
@@ -2,28 +2,37 @@
 
 {% block head %}
 <title>Final Booking</title>
-
+<link rel="stylesheet" href="static\css\final_booking.css"
 {% endblock %}
 
 {% block body %}
 
+<section class = "nav-link">
+    <nav>
+        <label>Registro</label>
+        <ul>
+            <li> <a href = "http://127.0.0.1:5000/">Cancel Registration</a></li>
+        </ul>
+    </nav>
+</section>
 
-<form method = "POST">
-    {% for i in result %}
-    <button>{{i[0]}}</button>                    
-    {% endfor %}
-    <br> <br>
-    <input type = "text" placeholder= "Enter Table" name = "option" required>
-    <br> <br>
-    <button type = "submit">BOOK</button>
-</form>
+<section class = "tables">
+    <form method = "POST">
+        <div class = "table-options">
 
+            {% for i in result %}
+        
+            <button>{{i[0]}}</button>         
+        
+            {% endfor %}
+        </div>
 
-
-
-
-
-
-
+        <div class = "submit">
+            <input type = "text" placeholder= "Enter Table" name = "option" required>
+            <button type = "submit">BOOK</button>
+        </div>
+        
+    </form>
+</section>
 
 {% endblock %}
