--- a/templates/guest_reservation.html
+++ b/templates/guest_reservation.html
@@ -46,7 +46,7 @@
             <span>
                 <input type = "number" placeholder= "No. of Guests for Dining" name = "count"  min = "2" max = "8" step = "2" required>
             </span>
-            <button type = "submit">Submit</button>
+            <button type = "submit">Let's Go</button>
         </form>
         
     </div>
