--- a/static/css/final_booking.css
+++ b/static/css/final_booking.css
@@ -51,7 +51,9 @@ li > a:hover{
 a:visited {
     color:white;
 }
-
+a{
+    text-decoration: none;
+}
 form{
     position: absolute;
     top: 50%;
@@ -64,6 +66,7 @@ form{
     width: 30vw;
     padding: 3vw;
 }
+
 
 button, input{
     padding: 1vw;
@@ -83,6 +86,26 @@ input{
     margin: 1vw auto;
 }
 
+.table-options button{
+    background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+    border: 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.submit button{
+    color: #fff;
+    background-color: green;
+    border: 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-weight: bold;
+    cursor: pointer;
+
+}
 .table-options button, .submit button{
     width:8vw;
     text-align: center;
@@ -93,10 +116,7 @@ input{
     background-color: burlywood;
 }
 
-form button:hover{
-    background-color: green;
 
-}
 @media only screen and (max-width: 1024px), screen and (max-height: 500px) {
     nav > label{
         font-size: 30px;
