--- a/static/css/success.css
+++ b/static/css/success.css
@@ -57,7 +57,8 @@ a:visited {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    color:black;
+    color:darkgreen;
+    text-shadow: 1px 1px black;
     background-color: rgba(255,255,255,0.7);
     padding: 10px;
     text-align: center;
