--- a/static/css/index.css
+++ b/static/css/index.css
@@ -83,7 +83,7 @@ button{
     width: 100%;
     padding: 10px;
 
-    font-size: 2.5vw;
+    font-size: 2vw;
     text-align: center;
     font-weight: 1vw;
 
@@ -112,10 +112,11 @@ button{
         font-size: 1rem;
     }
 
+   
     .container{   
         width: 320px;
         background-color: rgba(255,255,255,0.7);
-        margin: auto;
+        margin: 100px auto;
     }
     
     p.error-message{
