--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -78,7 +78,7 @@ button{
     width: 100%;
     padding: 10px;
 
-    font-size: 2.5vw;
+    font-size: 2vw;
     text-align: center;
     font-weight: 1vw;
 
@@ -110,7 +110,7 @@ button{
     .container{   
         width: 320px;
         background-color: rgba(255,255,255,0.7);
-        margin: auto;
+        margin: 100px auto;
     }
     
     p.error-message{
