--- a/templates/final_booking.html
+++ b/templates/final_booking.html
@@ -9,7 +9,9 @@
 
 <section class = "nav-link">
     <nav>
-        <label>Registro</label>
+        <label>
+            <a href = "http://127.0.0.1:5000/">Registro</a>
+        </label>
         <ul>
             <li> <a href = "http://127.0.0.1:5000/">Cancel Registration</a></li>
         </ul>
