--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -23,10 +23,11 @@
         {% endwith %}    
     
         <form method = "POST">
-                <input type = "text" placeholder="Email Address" name = "email_login" required>
-                <input type = "password" placeholder="Password" name = "pass_login" required>
-            <a href = forgot_password>Forgot password?</a> 
-            <button type = "submit">Login</button>
+                <input type = "text" placeholder="Email Address" name = "email" required>
+                <input type = "password" placeholder="New Password" name = "new_password" required>
+                <input type = "password" placeholder="Confirm Password" name = "confirm_password" required>
+
+            <button type = "submit">Change Password</button>
         </form>
         <div class = "sign-up">
             <p>Not a member? <a href = sign_up>Sign Up Now</a> </p>   
