--- a/templates/success.html
+++ b/templates/success.html
@@ -13,7 +13,7 @@
             <a href = "http://127.0.0.1:5000/">Registro</a>
         </label>
         <ul> 
-            <li> <a href = "#">Hello {{session.name}} </a></li>
+            <li> {{session.name}}</li>
             <li> <a href = "http://127.0.0.1:5000/">Sign out</a></li>
         </ul>
     </nav>
