--- a/templates/user_reservation.html
+++ b/templates/user_reservation.html
@@ -12,7 +12,7 @@
             <a href = "http://127.0.0.1:5000/">Registro</a>
         </label>
         <ul> 
-            <li> <a href = "">Hello {{session.name}} </a></li>
+            <li> <a href = "">{{session.name}} </a></li>
             <li> <a href = "http://127.0.0.1:5000/">Sign out</a></li>
         </ul>
     </nav>
@@ -43,7 +43,7 @@
                 <input type = "email" placeholder="Email Address" name = "email" required>
             </span>
             <span>
-                <input type = "datetime-local" placeholder="Date and Time" name = "datetime" required>
+                <input type = "datetime-local" step = "3600" placeholder="Date and Time" name = "datetime" required>
             </span>
             <span>
                 <input type = "number" placeholder= "No. of Guests for Dining" name = "count"  min = "2" max = "8" step = "2" required>
